test/files/neg/trait_fields_deprecated_overriding.scala
package scala

trait DeprecatedOverriding {
  @deprecatedOverriding val x = 1
}

class C extends DeprecatedOverriding {
  override val x = 2
}
